Fix alert error on mobile

--- a/src/stylesheets/layouts/_road.scss
+++ b/src/stylesheets/layouts/_road.scss
@@ -13,6 +13,7 @@
 }
 
 .road-1 {
+  z-index: 20;
   background-image:
     url(../images/bg/clouds/cloud1.png),
     url(../images/bg/clouds/cloud3.png),
